agrego funciones para estandarizar nombres de columnas

--- a/notebooks/2_procesamiento.ipynb
+++ b/notebooks/2_procesamiento.ipynb
@@ -9,20 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Bibliotecas para Manipulación de Datos y Análisis\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
     "# Visualización\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import missingno as msno\n",
+    "\n",
     "# Operaciones del sistema operativo\n",
     "import os\n",
-    "# Preprocesamiento y Escalado\n",
+    "\n",
     "# Preprocesamiento y Escalado\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import OrdinalEncoder, LabelEncoder, RobustScaler, StandardScaler"
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,12 +79,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Funcion para renombramiento de columnas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**snake_case**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def snake_case(column_name):\n",
+    "    column_name = column_name.lower()\n",
+    "    column_name = column_name.replace(' ', '_')\n",
+    "    return column_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Eliminar signos extraños**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_signs(column_name, list_signs):\n",
+    "    for sign in list_signs:\n",
+    "        column_name = column_name.replace(sign, '')\n",
+    "    return column_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Lectura de csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +333,7 @@
        "4         PayPal               Annually  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +468,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,37 +494,200 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Seleccion de caracteristicas"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer ID</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Item Purchased</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Purchase Amount (USD)</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Size</th>\n",
+       "      <th>Color</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Review Rating</th>\n",
+       "      <th>Subscription Status</th>\n",
+       "      <th>Shipping Type</th>\n",
+       "      <th>Discount Applied</th>\n",
+       "      <th>Promo Code Used</th>\n",
+       "      <th>Previous Purchases</th>\n",
+       "      <th>Payment Method</th>\n",
+       "      <th>Frequency of Purchases</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>669</th>\n",
+       "      <td>670</td>\n",
+       "      <td>43</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Jacket</td>\n",
+       "      <td>Outerwear</td>\n",
+       "      <td>89</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Gray</td>\n",
+       "      <td>Spring</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Free Shipping</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Venmo</td>\n",
+       "      <td>Bi-Weekly</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>976</th>\n",
+       "      <td>977</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>T-shirt</td>\n",
+       "      <td>Clothing</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Gray</td>\n",
+       "      <td>Fall</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Express</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>50</td>\n",
+       "      <td>Credit Card</td>\n",
+       "      <td>Every 3 Months</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3802</th>\n",
+       "      <td>3803</td>\n",
+       "      <td>70</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Scarf</td>\n",
+       "      <td>Accessories</td>\n",
+       "      <td>72</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Turquoise</td>\n",
+       "      <td>Spring</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2-Day Shipping</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bank Transfer</td>\n",
+       "      <td>Monthly</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2305</th>\n",
+       "      <td>2306</td>\n",
+       "      <td>68</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Handbag</td>\n",
+       "      <td>Accessories</td>\n",
+       "      <td>63</td>\n",
+       "      <td>Maine</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Gold</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Free Shipping</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>47</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>Weekly</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Customer ID  Age  Gender Item Purchased     Category  \\\n",
+       "669           670   43    Male         Jacket    Outerwear   \n",
+       "976           977   34    Male        T-shirt     Clothing   \n",
+       "3802         3803   70  Female          Scarf  Accessories   \n",
+       "2305         2306   68    Male        Handbag  Accessories   \n",
+       "\n",
+       "      Purchase Amount (USD)  Location Size      Color  Season  Review Rating  \\\n",
+       "669                      89  Illinois    M       Gray  Spring            3.3   \n",
+       "976                      90   Florida    M       Gray    Fall            3.6   \n",
+       "3802                     72  Illinois    S  Turquoise  Spring            3.2   \n",
+       "2305                     63     Maine    M       Gold  Summer            2.6   \n",
+       "\n",
+       "     Subscription Status   Shipping Type Discount Applied Promo Code Used  \\\n",
+       "669                  Yes   Free Shipping              Yes             Yes   \n",
+       "976                  Yes         Express              Yes             Yes   \n",
+       "3802                  No  2-Day Shipping               No              No   \n",
+       "2305                  No   Free Shipping               No              No   \n",
+       "\n",
+       "      Previous Purchases Payment Method Frequency of Purchases  \n",
+       "669                   45          Venmo              Bi-Weekly  \n",
+       "976                   50    Credit Card         Every 3 Months  \n",
+       "3802                   1  Bank Transfer                Monthly  \n",
+       "2305                  47           Cash                 Weekly  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_procesado.sample(4)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estandarizacion nombramiento de columnas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Selecciono aquellas columnas que no aportan valor a la situacion de negocio para poder eliminarlas\n",
-    "\n",
-    "# contact: tipo de comunicación del contacto (categórico: ‘cellular’, ‘telephone’)\n",
-    "# pdays: número de días que han pasado desde que el cliente fue contactado por última vez en una campaña anterior (numérico; 999 significa que el cliente no fue contactado previamente)\n",
-    "# euribor3m: tasa euribor a 3 meses - indicador diario (numérico)\n",
-    "# nr.employed: número de empleados - indicador trimestral (numérico)\n",
-    "# duration: duración del último contacto, en segundos (numérico)\n",
-    "\n",
-    "columnas_a_eliminar = ['contact', 'duration', 'pdays', 'nr.employed', 'euribor3m']\n",
-    "df_procesado.drop(columns=columnas_a_eliminar, inplace=True)"
+    "list_signs = ['(', ')']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = df_procesado.columns\n",
+    "columns = list(map(snake_case, columns))\n",
+    "columns = list(map(lambda col: clean_signs(column_name=col, list_signs=list_signs), columns))"
    ]
   },
   {
@@ -489,11 +699,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Customer ID                 int64\n",
+       "Age                         int64\n",
+       "Gender                     object\n",
+       "Item Purchased             object\n",
+       "Category                   object\n",
+       "Purchase Amount (USD)       int64\n",
+       "Location                   object\n",
+       "Size                       object\n",
+       "Color                      object\n",
+       "Season                     object\n",
+       "Review Rating             float64\n",
+       "Subscription Status        object\n",
+       "Shipping Type              object\n",
+       "Discount Applied           object\n",
+       "Promo Code Used            object\n",
+       "Previous Purchases          int64\n",
+       "Payment Method             object\n",
+       "Frequency of Purchases     object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_procesado.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_procesado.dtypes"
+    "Purchase Amount (USD)"
    ]
   },
   {
