Fianlizo etapa de procesamiento de datos

--- a/notebooks/2_procesamiento.ipynb
+++ b/notebooks/2_procesamiento.ipynb
@@ -794,6 +794,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_procesado.loc[df_procesado['frequency_of_purchases']=='every 3 months', 'frequency_of_purchases'] = 'quarterly'\n",
+    "df_procesado.loc[df_procesado['frequency_of_purchases']=='fortnightly', 'frequency_of_purchases'] = 'bi-weekly'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 101,
    "metadata": {},
    "outputs": [],
@@ -880,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,21 +899,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Definir un diccionario con las categorías en orden\n",
     "\n",
     "categorias_ordenadas = {\n",
-    "    'marital': ['unknown', 'single', 'married', 'divorced'],\n",
-    "    'education': ['unknown', 'basic.4y', 'basic.6y', 'basic.9y', 'primary', 'high.school', 'secondary', 'illiterate', 'professional.course', 'tertiary', 'university.degree', np.nan],\n",
-    "    'default': ['unknown', 'no', 'yes'],\n",
-    "    'housing': ['unknown', 'no', 'yes'],\n",
-    "    'loan': ['unknown', 'no', 'yes'],\n",
-    "    'poutcome': ['other', 'failure', 'nonexistent', 'success', np.nan],\n",
-    "    'subscribed': ['no', 'yes'],\n",
-    "    'month': ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12'],\n",
+    "    'size': ['s', 'm', 'l', 'xl'],\n",
+    "    'subscription_status': ['no', 'yes'],\n",
+    "    'discount_applied': ['no', 'yes'],\n",
+    "    'promo_code_used': ['no', 'yes'],\n",
+    "    'frequency_of_purchases': ['weekly', 'bi-weekly', 'monthly', 'quarterly', 'annually'],\n",
+    "    'vital_stages': ['adolescente', 'adulto', 'tercera_edad'],\n",
+    "    'season': ['winter', 'spring', 'summer', 'fall']\n",
     "}\n",
     "\n",
     "# Configurar el codificador con las categorías en el orden especificado\n",
@@ -916,9 +925,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>size_encoded</th>\n",
+       "      <th>subscription_status_encoded</th>\n",
+       "      <th>discount_applied_encoded</th>\n",
+       "      <th>promo_code_used_encoded</th>\n",
+       "      <th>frequency_of_purchases_encoded</th>\n",
+       "      <th>vital_stages_encoded</th>\n",
+       "      <th>season_encoded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1230</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3585</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      size_encoded  subscription_status_encoded  discount_applied_encoded  \\\n",
+       "1230           2.0                          0.0                       1.0   \n",
+       "3585           3.0                          0.0                       0.0   \n",
+       "\n",
+       "      promo_code_used_encoded  frequency_of_purchases_encoded  \\\n",
+       "1230                      1.0                             2.0   \n",
+       "3585                      0.0                             1.0   \n",
+       "\n",
+       "      vital_stages_encoded  season_encoded  \n",
+       "1230                   1.0             1.0  \n",
+       "3585                   1.0             0.0  "
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_variables_ordinales_escaladas.sample(2)"
    ]
@@ -932,7 +1015,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columnas_categoricas_nominales = df_procesado.select_dtypes(include='category').columns\n",
+    "columnas_categoricas_nominales = [col for col in columnas_categoricas_nominales if col not in categorias_ordenadas.keys()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,9 +1048,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>item_purchased</th>\n",
+       "      <th>category_item</th>\n",
+       "      <th>location</th>\n",
+       "      <th>color</th>\n",
+       "      <th>shipping_type</th>\n",
+       "      <th>payment_method</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>691</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>19</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958</th>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      gender  item_purchased  category_item  location  color  shipping_type  \\\n",
+       "691        1               0              0        20     19              4   \n",
+       "1958       1              18              1        27      7              5   \n",
+       "\n",
+       "      payment_method  \n",
+       "691                4  \n",
+       "1958               1  "
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_variables_nominales_escaladas.sample(2)"
    ]
@@ -971,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,9 +1174,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>purchase_amount_usd</th>\n",
+       "      <th>review_rating</th>\n",
+       "      <th>previous_purchases</th>\n",
+       "      <th>size_encoded</th>\n",
+       "      <th>subscription_status_encoded</th>\n",
+       "      <th>discount_applied_encoded</th>\n",
+       "      <th>promo_code_used_encoded</th>\n",
+       "      <th>frequency_of_purchases_encoded</th>\n",
+       "      <th>vital_stages_encoded</th>\n",
+       "      <th>season_encoded</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>item_purchased</th>\n",
+       "      <th>category_item</th>\n",
+       "      <th>location</th>\n",
+       "      <th>color</th>\n",
+       "      <th>shipping_type</th>\n",
+       "      <th>payment_method</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>269</th>\n",
+       "      <td>-0.862016</td>\n",
+       "      <td>0.923077</td>\n",
+       "      <td>-0.380952</td>\n",
+       "      <td>-0.307692</td>\n",
+       "      <td>-0.64</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3095</th>\n",
+       "      <td>0.587587</td>\n",
+       "      <td>0.692308</td>\n",
+       "      <td>-0.166667</td>\n",
+       "      <td>-0.230769</td>\n",
+       "      <td>-0.48</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      customer_id       age  purchase_amount_usd  review_rating  \\\n",
+       "269     -0.862016  0.923077            -0.380952      -0.307692   \n",
+       "3095     0.587587  0.692308            -0.166667      -0.230769   \n",
+       "\n",
+       "      previous_purchases  size_encoded  subscription_status_encoded  \\\n",
+       "269                -0.64           1.0                          1.0   \n",
+       "3095               -0.48           0.0                          0.0   \n",
+       "\n",
+       "      discount_applied_encoded  promo_code_used_encoded  \\\n",
+       "269                        1.0                      1.0   \n",
+       "3095                       0.0                      0.0   \n",
+       "\n",
+       "      frequency_of_purchases_encoded  vital_stages_encoded  season_encoded  \\\n",
+       "269                              1.0                   2.0             0.0   \n",
+       "3095                             1.0                   2.0             3.0   \n",
+       "\n",
+       "      gender  item_purchased  category_item  location  color  shipping_type  \\\n",
+       "269        1               2              1         9      4              3   \n",
+       "3095       0               8              0        22      0              4   \n",
+       "\n",
+       "      payment_method  \n",
+       "269                1  \n",
+       "3095               5  "
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_estandarizado_escalado.sample(2)"
    ]
@@ -1027,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
