Reparo notebook de la etapa 1

--- a/notebooks/1_adquisicion_comprension_datos.ipynb
+++ b/notebooks/1_adquisicion_comprension_datos.ipynb
@@ -15,25 +15,9 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "code",
    "execution_count": 1,
-=======
-   "cell_type": "markdown",
->>>>>>> 758deaba6507edb347df6413e445961477fd9529
    "metadata": {},
-   "source": [
-    "**El primer paso sera importar las librerias de Python que el proyecto requiere, El uso de estas bibliotecas nos permite cubrir todos los aspectos del procesamiento de datos, desde la adquisición hasta la manipulación y análisis de los mismos, incluyendo la identificación de posibles problemas como datos faltantes o errores en los valores de las columnas.**\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
    "outputs": [],
    "source": [
     "# Bibliotecas para Manipulación de Datos y Análisis\n",
@@ -60,21 +44,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- **Definimos la variable ``path_csv_update``, que almacena la ruta del archivo CSV que queremos procesar.**\n",
-    "- **Utilizamos la función ``read_csv`` de la biblioteca pandas para cargar el archivo CSV en un DataFrame. Esto nos permite manejar y analizar los datos de forma más eficiente, aprovechando las capacidades de manipulación de datos de pandas.**"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [],
    "source": [
     "path_csv_update = '../data/bronze/shopping_behavior_updated.csv'\n",
@@ -94,24 +66,13 @@
    "source": [
     "### Descripcion y estadisticas basicas\n",
     "\n",
-    "**Luego se analizaran visualmente en la etapa de EDA**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- **Utilizamos el método describe para obtener un resumen estadístico del conjunto de datos, que incluye métricas clave como la media, la desviación estándar, los valores mínimos, máximos, y los percentiles.**"
+    "Luego se analizaran visaulmente en la etapa de EDA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
+   "execution_count": 60,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -444,7 +405,7 @@
        "max              50.000000            NaN                    NaN  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,20 +422,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- **Utilizamos el método dtypes para obtener los nombres de las columnas del DataFrame y los tipos de datos asociados a cada una de ellas.**"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -500,7 +450,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,132 +460,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- **Acá separamos los valores categoricos de los valores numericos, esto porque identificar las columnas categóricas es un paso fundamental en la comprensión de los datos porque te permite tomar decisiones informadas sobre cómo manejar y preparar las diferentes variables, ajustar técnicas de limpieza, visualización, y transformarlas correctamente para el análisis o modelado.**"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
+   "execution_count": 62,
+   "metadata": {},
    "outputs": [],
    "source": [
     "categorical_variables = df.select_dtypes(exclude=['number']).columns"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. **Creamos una serie vacía llamada `unique_categories`.**\n",
-    "2. **Creamos un diccionario vacío llamado ``dict_unique_categories``.**\n",
-    "\n",
-    "- **Iteramos con un bucle for sobre cada columna en la lista ``categorical_variables``. En cada iteración:**\n",
-    "\n",
-    "    * Guardamos los valores únicos de esa columna en la serie ``unique_categories`` con la clave siendo el nombre de la columna.\n",
-    "    * Guardamos el conteo de valores únicos de esa columna en el diccionario ``dict_unique_categories`` con la clave siendo el nombre de la columna\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
+   "execution_count": 70,
+   "metadata": {},
    "outputs": [],
    "source": [
     "unique_categories = pd.Series({})\n",
-    "dict_unique_categories = {}\n",
     "\n",
-    "for column in categorical_variables:\n",
-    "    unique_categories[column] = df[column].unique()\n",
-    "    dict_unique_categories[column] = df[column].nunique()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. **Iteramos con un bucle for sobre cada par clave-valor en el diccionario `dict_unique_categories`.** \n",
-    "\n",
-    "    - En cada iteración del bucle:  \n",
-    "\n",
-    "        * key representa el nombre de la columna (la clave en el diccionario).\n",
-    "\n",
-    "        * value representa el conteo de valores únicos en esa columna (el valor en el diccionario).\n",
-    "\n",
-    "2. **Imprimimos una cadena formateada que muestra:**\n",
-    "\n",
-    "    * El nombre de la columna (key).\n",
-    "    * El conteo de valores únicos en esa columna (value)."
+    "for column in df[categorical_variables]:\n",
+    "    unique_categories[column] = df[column].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Columna: Gender - Valores unicos: 2\n",
-      "Columna: Item Purchased - Valores unicos: 25\n",
-      "Columna: Category - Valores unicos: 4\n",
-      "Columna: Location - Valores unicos: 50\n",
-      "Columna: Size - Valores unicos: 4\n",
-      "Columna: Color - Valores unicos: 25\n",
-      "Columna: Season - Valores unicos: 4\n",
-      "Columna: Subscription Status - Valores unicos: 2\n",
-      "Columna: Shipping Type - Valores unicos: 6\n",
-      "Columna: Discount Applied - Valores unicos: 2\n",
-      "Columna: Promo Code Used - Valores unicos: 2\n",
-      "Columna: Payment Method - Valores unicos: 6\n",
-      "Columna: Frequency of Purchases - Valores unicos: 7\n"
-     ]
-    }
-   ],
-   "source": [
-    "for key, value in dict_unique_categories.items():\n",
-    "    print(f\"Columna: {key} - Valores unicos: {value}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "execution_count": 74,
    "metadata": {},
-   "source": [
-    "1. **Calculamos las frecuencias de los valores únicos en `unique_categories`.**\n",
-    "\n",
-    "   - Usamos el método `value_counts()` para contar cuántas veces aparece cada valor único en la serie `unique_categories`.\n",
-    "   - Guardamos el resultado en la variable `count_unique_values`, que es una nueva serie con los valores únicos como índices y sus frecuencias como valores."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
    "outputs": [],
    "source": [
     "count_unique_values = unique_categories.value_counts()"
@@ -643,12 +491,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
+   "execution_count": 68,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -704,17 +548,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -724,11 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# guardo los dataframes con archivo .csv dentro de la carpeta \"bronze\"\n",
@@ -739,7 +568,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -753,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
