Agrego diccionario de datos y tablas de mapeo de caracteristicas

--- a/notebooks/1_extract_comprehension.ipynb
+++ b/notebooks/1_extract_comprehension.ipynb
@@ -523,7 +523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variables del Dataset\n",
+    "### Diccionario de datos\n",
     "\n",
     "| Columna                   | Tipo de dato | Descripción                                      | Variables únicas                                                      |\n",
     "|----------------------------|--------------|--------------------------------------------------|-----------------------------------------------------------------------|\n",
