--- a/notebooks/1_extract_comprehension.ipynb
+++ b/notebooks/1_extract_comprehension.ipynb
@@ -45,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_csv_update = '../data/bronze/shopping_behavior_updated.csv'\n",
+    "path_csv_update = '../data/1_bronze/shopping_behavior_updated.csv'\n",
     "df = pd.read_csv(path_csv_update)"
    ]
   },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "max              50.000000            NaN                    NaN  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -556,13 +556,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# guardo los dataframes con archivo .csv dentro de la carpeta \"bronze\"\n",
-    "path_csv = '../data/bronze/clients_behavior.csv'\n",
-    "df.to_csv(path_csv_from_library, index=False)"
+    "path_csv = '../data/1_bronze/clients_behavior.csv'\n",
+    "df.to_csv(path_csv, index=False)"
    ]
   }
  ],
